--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@mui/material": "^5.14.9",
     "@mui/styled-engine-sc": "^5.14.9",
     "babel-plugin-styled-components": "^2.1.4",
+    "material-ui-color": "^1.2.0",
+    "@material-ui/core": "^4.11.2",
+    "material-ui-popup-state": "^1.7.1",
+    "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.8"
