--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@material-ui/core": "^4.11.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@mui/styled-engine-sc": "^5.14.9",
     "babel-plugin-styled-components": "^2.1.4",
     "material-ui-color": "^1.2.0",
-    "@material-ui/core": "^4.11.2",
     "material-ui-popup-state": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
